fix table on mobile

--- a/src/less/docs.less
+++ b/src/less/docs.less
@@ -659,6 +659,10 @@ ul.method-parameters {
       }
     }
   }
+  .docs-content table {
+    display: block;
+    overflow-x: auto;
+  }
 }
 
 .docs-color-form {
